update about page

--- a/about.html
+++ b/about.html
@@ -74,10 +74,10 @@
         <nav class="header-nav-wrap">
             <ul class="header-nav">
                 <li><a href="index.html#home" title="home">Home</a></li>
-                <li><a href="index.html#about" title="about">About</a></li>
+                <li class="current"><a href="#" title="about">About</a></li>
                 <li><a href="index.html#works" title="works">Works</a></li>
                 <li><a class="smoothscroll"  href="https://adplist.org/mentors/chukwudumebi-iwuchukwu" target="_blank" rel="noopener" title="works">Mentoring</a></li>
-                <li class="current"><a href="scrapbook.html" title="blog">Scrapbook</a></li>
+                <li><a href="scrapbook.html" title="scrapbool">Scrapbook</a></li>
                 <li><a href="#contact" title="contact">Contact</a></li>
             </ul>
         </nav>
@@ -147,7 +147,7 @@
                         <div class="timeline__block">
                             <div class="timeline__bullet"></div>
                             <div class="timeline__header">
-                                <p class="timeline__timeframe">April 2020 - Present</p>
+                                <p class="timeline__timeframe">April 2021 - Present</p>
                                 <h3>Design Mentor</h3>
                                 <h5><a href="https://adplist.org/" target="_blank" rel="noopener">ADPList</a></h5>
                             </div>
@@ -190,6 +190,89 @@
                 </div> <!-- end right -->
 
             </div> <!-- end about-content timeline -->
+
+            <div class="row about-content about-content--timeline">
+
+                <div class="col-full text-center">
+                    <h1>My Education.</h1>
+                </div>
+
+                <div class="col-six tab-full left">
+                    <div class="timeline">
+
+                        <div class="timeline__block">
+                            <div class="timeline__bullet"></div>
+                            <div class="timeline__header">
+                                <p class="timeline__timeframe">In View</p>
+                                <h3>Udacity</h3>
+                                <h5>User Experience Design Nanodegree</h5>
+                            </div>
+
+                        </div> <!-- end timeline__block -->
+
+                        <div class="timeline__block">
+                            <div class="timeline__bullet"></div>
+                            <div class="timeline__header">
+                                <p class="timeline__timeframe">In View</p>
+                                <h3>Google Career Certificates</h3>
+                                <h5>Google UX Design Professional Certificate</h5>
+                            </div>
+
+                        </div> <!-- end timeline__block -->
+
+                        <div class="timeline__block">
+                            <div class="timeline__bullet"></div>
+                            <div class="timeline__header">
+                                <p class="timeline__timeframe">2020</p>
+                                <h3>Interaction Design Foundation</h3>
+                                <h5>Human-Computer Interaction - HCI</h5>
+                            </div>
+
+                        </div> <!-- end timeline__block -->
+
+
+
+                    </div> <!-- end timeline -->
+                </div> <!-- end left -->
+
+                <div class="col-six tab-full right">
+                    <div class="timeline">
+
+                      <div class="timeline__block">
+                          <div class="timeline__bullet"></div>
+                          <div class="timeline__header">
+                              <p class="timeline__timeframe">2020</p>
+                              <h3>Interaction Design Foundation</h3>
+                              <h5>Get Your Product Used: Adoption and Appropriation</h5>
+                          </div>
+
+                      </div> <!-- end timeline__block -->
+
+                        <div class="timeline__block">
+                            <div class="timeline__bullet"></div>
+                            <div class="timeline__header">
+                                <p class="timeline__timeframe">2018</p>
+                                <h3>O2 Academy Lagos</h3>
+                                <h5>Total Brand Experience (TBE)  Art Direction and Digital Brand Strategy</h5>
+                            </div>
+
+                        </div> <!-- end timeline__block -->
+
+                        <div class="timeline__block">
+                            <div class="timeline__bullet"></div>
+                            <div class="timeline__header">
+                                <p class="timeline__timeframe">2015</p>
+                                <h3>Nnamdi Azikiwe University</h3>
+                                <h5>BSc in Radiography</h5>
+                            </div>
+
+                        </div> <!-- end timeline__block -->
+
+                    </div> <!-- end timeline -->
+                </div> <!-- end right -->
+
+            </div> <!-- end about-content timeline -->
+
         </div> <!-- end blog-content -->
 
     </article>
