--- a/cookie-policy.html
+++ b/cookie-policy.html
@@ -81,9 +81,9 @@
         <nav class="header-nav-wrap">
             <ul class="header-nav">
               <ul class="header-nav">
-                <li><a href="index.html#about" title="about">About</a></li>
+                <li><a href="about.html" title="about">About</a></li>
                 <li><a href="index.html#portfolio" title="works">Works</a></li>
-                <li><a href="scrapbook.html"  title="works">Scrapbook</a></li>
+                <li><a href="scrapbook.html"  title="scarpbook">Scrapbook</a></li>
                 <li><a href="https://adplist.org/mentors/chukwudumebi-iwuchukwu" target="_blank" rel="noopener" title="works">Mentoring</a></li>
               </ul>
             </ul>
