--- a/scrapbook.html
+++ b/scrapbook.html
@@ -78,9 +78,9 @@
 
         <nav class="header-nav-wrap">
             <ul class="header-nav">
-                <li><a href="index.html#about" title="about">About</a></li>
+                <li><a href="about.html" target="_blank" title="about">About</a></li>
                 <li><a href="index.html#works" title="works">Works</a></li>
-                <li class="current"><a href="#" title="blog">Scrapbook</a></li>
+                <li class="current"><a href="#" title="scrapbook">Scrapbook</a></li>
                 <li><a href="https://adplist.org/mentors/chukwudumebi-iwuchukwu" target="_blank" rel="noopener" title="works">Mentoring</a></li>
             </ul>
         </nav>
