--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
 
    <meta property="og:url" content="https://www.dum3bi.com/">
    <meta property="og:type" content="website">
-   <meta property="og:title" content="Dumebi Iwuchukwu | Product Designer.">
+   <meta property="og:title" content="Dumebi Iwuchukwu | Art Director.">
    <meta property="og:description" content="I help businesses scale and make money by designing brands, products and experiences at the intersection of culture, design and technology.">
    <meta property="og:image" content="https://www.dum3bi.com/images/logo-black.png">
    <meta property="og:image:alt" content="Dumebi's logo">
@@ -74,10 +74,10 @@
         <nav class="header-nav-wrap">
             <ul class="header-nav">
                 <li><a href="index.html#home" title="home">Home</a></li>
-                <li class="current"><a href="#" title="about">About</a></li>
+                <li class="current"><a href="#" title="about">Me</a></li>
                 <li><a href="index.html#works" title="works">Works</a></li>
-                <li><a class="smoothscroll"  href="https://adplist.org/mentors/chukwudumebi-iwuchukwu" target="_blank" rel="noopener" title="works">Mentoring</a></li>
-                <li><a href="scrapbook.html" title="scrapbool">Scrapbook</a></li>
+                <li><a class="smoothscroll"  href="https://adplist.org/mentors/chukwudumebi-iwuchukwu" target="_blank" rel="noopener" title="Design Mentorship">Mentoring</a></li>
+                <li><a href="scrapbook.html" title="scrapbook">Scrapbook</a></li>
                 <li><a href="#contact" title="contact">Contact</a></li>
             </ul>
         </nav>
