--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!--- basic page needs
     ================================================== -->
   <meta name="yandex-verification" content="33730aaf93aa663d" />
-    <title>Dumebi Iwuchukwu | Product Designer</title>
+    <title>Dumebi Iwuchukwu | Art Director</title>
     <meta name="description" content="I help businesses scale and make money by designing brands, products and experiences at the intersection of culture, design and technology.">
     <meta name="theme-color" content="#9849b1"/>
 
@@ -24,7 +24,7 @@
 
   <meta property="og:url" content="https://www.dum3bi.com/">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="Dumebi Iwuchukwu | Product Designer.">
+  <meta property="og:title" content="Dumebi Iwuchukwu | Art Director.">
   <meta property="og:description" content="I help businesses scale and make money by designing brands, products and experiences at the intersection of culture, design and technology.">
   <meta property="og:image" content="https://www.dum3bi.com/images/logo-black.png">
   <meta property="og:image:alt" content="Dumebi's logo">
@@ -81,10 +81,10 @@
 
         <nav class="header-nav-wrap">
             <ul class="header-nav">
-                <li><a href="about.html" target="_blank" title="about">About</a></li>
+                <li><a href="about.html" target="_blank" title="about">Me</a></li>
                 <li><a class="smoothscroll"  href="#portfolio" title="works">Works</a></li>
                 <li><a href="scrapbook.html" target="_blank" title="Scapbook">Scrapbook</a></li>
-                <li><a href="https://adplist.org/mentors/chukwudumebi-iwuchukwu" target="_blank" rel="noopener" title="works">Mentoring</a></li>
+                <li><a href="https://adplist.org/mentors/chukwudumebi-iwuchukwu" target="_blank" rel="noopener" title="Design Mentorship">Mentoring</a></li>
             </ul>
         </nav>
 
@@ -404,7 +404,7 @@
 
     </section>
 
-  
+
 
 
     <section id="contact" class="s-contact target-section">
