--- a/scrapbook.html
+++ b/scrapbook.html
@@ -24,7 +24,7 @@
 
    <meta property="og:url" content="https://www.dum3bi.com/">
    <meta property="og:type" content="website">
-   <meta property="og:title" content="Dumebi Iwuchukwu | Product Designer.">
+   <meta property="og:title" content="Dumebi Iwuchukwu | Art Director.">
    <meta property="og:description" content="I help businesses scale and make money by designing brands, products and experiences at the intersection of culture, design and technology.">
    <meta property="og:image" content="https://www.dum3bi.com/images/logo-black.png">
    <meta property="og:image:alt" content="Dumebi's logo">
@@ -78,10 +78,10 @@
 
         <nav class="header-nav-wrap">
             <ul class="header-nav">
-                <li><a href="about.html" target="_blank" title="about">About</a></li>
+                <li><a href="about.html" target="_blank" title="about">Me</a></li>
                 <li><a href="index.html#works" title="works">Works</a></li>
                 <li class="current"><a href="#" title="scrapbook">Scrapbook</a></li>
-                <li><a href="https://adplist.org/mentors/chukwudumebi-iwuchukwu" target="_blank" rel="noopener" title="works">Mentoring</a></li>
+                <li><a href="https://adplist.org/mentors/chukwudumebi-iwuchukwu" target="_blank" rel="noopener" title="Design Mentorship">Mentoring</a></li>
             </ul>
         </nav>
 
