--- a/thank-you.html
+++ b/thank-you.html
@@ -60,10 +60,10 @@
 
         <nav class="header-nav-wrap">
           <ul class="header-nav">
-            <li><a href="index.html#about" title="about">About</a></li>
+            <li><a href="index.html#about" title="about">Me</a></li>
             <li><a href="index.html#portfolio" title="works">Works</a></li>
             <li><a href="scrapbook.html"  title="works">Scrapbook</a></li>
-            <li><a href="https://adplist.org/mentors/chukwudumebi-iwuchukwu" target="_blank" rel="noopener" title="works">Mentoring</a></li>
+            <li><a href="https://adplist.org/mentors/chukwudumebi-iwuchukwu" target="_blank" rel="noopener" title="Design Mentorship">Mentoring</a></li>
           </ul>
         </nav>
 
