--- a/cookie-policy.html
+++ b/cookie-policy.html
@@ -19,8 +19,8 @@
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-     <title>Cookie Policy- Personal website of Dumebi Iwuchukwu Micheal</title>
-     <meta name="theme-color" content="#1f1f22"/>
+     <title>Cookie Policy | Dumebi Iwuchukwu</title>
+     <meta name="theme-color" content="#9849b1"/>
 
    <link rel="canonical" href="https://www.dum3bi.com/">
    <meta property="og:site_name" content="Dumebi Iwuchukwu">
@@ -31,13 +31,13 @@
 
    <meta property="og:url" content="https://www.dum3bi.com/">
    <meta property="og:type" content="website">
-   <meta property="og:title" content="Dum3bi- Personal website of Dumebi Iwuchukwu Micheal.">
-   <meta property="og:description" content="Dumebi is an Art Director, Brand Strategist and Developer based in Lagos in Nigeria, building brands at the speed of culture.">
+   <meta property="og:title" content="Dum3bi | Dumebi Iwuchukwu.">
+   <meta property="og:description" content="I help businesses scale and make money by designing brands, products and experiences at the intersection of culture, design and technology.">
    <meta property="og:image" content="https://www.dum3bi.com/images/logo.svg">
    <meta property="og:image:alt" content="Dumebi's logo">
    <meta name="twitter:card" content="summary_large_image">
    <meta name="twitter:title" content="Dumebi Iwuchukwu">
-   <meta name="twitter:description" content="Dumebi is an Art Director, Brand Strategist and Developer based in Lagos in Nigeria, building brands at the speed of culture.">
+   <meta name="twitter:description" content="I help businesses scale and make money by designing brands, products and experiences at the intersection of culture, design and technology.">
    <meta name="twitter:image" content="https://www.dum3bi.com/images/logo.svg">
 
    <meta property="og:type" content="website">
@@ -82,7 +82,7 @@
             <ul class="header-nav">
               <ul class="header-nav">
                 <li><a href="about.html" title="about">About</a></li>
-                <li><a href="index.html#portfolio" title="works">Works</a></li>
+                <li><a href="index.html#portfolio" title="works">Projects</a></li>
                 <li><a href="scrapbook.html"  title="scarpbook">Scrapbook</a></li>
                 <li><a href="https://adplist.org/mentors/chukwudumebi-iwuchukwu" target="_blank" rel="noopener" title="works">Mentoring</a></li>
               </ul>
