--- a/offline.html
+++ b/offline.html
@@ -11,7 +11,7 @@
     <!--- basic page needs
     ================================================== -->
   <meta name="yandex-verification" content="33730aaf93aa663d" />
-    <title>Dumebi Iwuchukwu | Product Designer</title>
+    <title>Dumebi Iwuchukwu | Art Director</title>
     <meta name="description" content="I help businesses scale and make money by designing brands, products and experiences at the intersection of culture, design and technology.">
     <meta name="theme-color" content="#9849b1"/>
 
@@ -24,7 +24,7 @@
 
   <meta property="og:url" content="https://www.dum3bi.com/">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="Dumebi Iwuchukwu | Product Designer.">
+  <meta property="og:title" content="Dumebi Iwuchukwu | Art Director.">
   <meta property="og:description" content="I help businesses scale and make money by designing brands, products and experiences at the intersection of culture, design and technology.">
   <meta property="og:image" content="https://www.dum3bi.com/images/logo-black.png">
   <meta property="og:image:alt" content="Dumebi's logo">
@@ -81,10 +81,10 @@
 
         <nav class="header-nav-wrap">
             <ul class="header-nav">
-                <li><a class="smoothscroll"  href="#about" title="about">About</a></li>
-                <li><a class="smoothscroll"  href="#portfolio" title="works">Works</a></li>
-                <li><a href="scrapbook.html" target="_blank" title="works">Scrapbook</a></li>
-                <li><a href="https://adplist.org/mentors/chukwudumebi-iwuchukwu" target="_blank" rel="noopener" title="works">Mentoring</a></li>
+                <li><a href="about.html" target="_blank" title="about">Me</a></li>
+                <li><a class="smoothscroll"  href="#portfolio" title="works">Projects</a></li>
+                <li><a href="scrapbook.html" target="_blank" title="Scapbook">Scrapbook</a></li>
+                <li><a href="https://adplist.org/mentors/chukwudumebi-iwuchukwu" target="_blank" rel="noopener" title="Design Mentorship">Mentoring</a></li>
             </ul>
         </nav>
 
@@ -105,18 +105,13 @@
             <div class="row home-content__main">
 
 
-              <h1>
-                Hi 👋🏼, I'm Dumebi, <br>
-                I design beautiful experiences & mentor designers.
-              </h1>
+
 
              <div class="home-content__buttons">
-                 <a href="#portfolio" class="smoothscroll btn btn--stroke">
-                     Latest Projects
-                 </a>
-                 <a href="#about" class="smoothscroll btn btn--stroke">
-                     About Me
-                 </a>
+               <h1>
+                 Hi 👋🏼, I'm Dumebi, <br>
+                 I design beautiful experiences & mentor designers.
+               </h1>
              </div>
 
              <div class="home-content__scroll">
@@ -409,38 +404,6 @@
 
     </section>
 
-    <!-- about
-    ================================================== -->
-    <section id="about" class="s-about target-section">
-
-        <div class="row narrow section-intro has-bottom-sep">
-            <div class="col-full text-center">
-                <h3>About</h3>
-                <h1>Dumebi Iwuchukwu</h1>
-                <p style="text-align:center;" class="lead">Art Director & Product Designer</p>
-            </div>
-        </div>
-
-    <div class="container about-content">
-
-    <div class="col-six tab-full left">
-    <img src="images\about.jpg" alt="" class="lazyload">
-    </div>
-
-    <div class="col-six tab-full right">
-
-            <div>
-              <h3>I am Dumebi (Du-may-be) Nnadirinwa Iwuchukwu, a designer based in Lagos, Nigeria. I have been working in design for over 9 years now. Presently I'm an Art Director at <a href="https://www.webcoupers.com/" target="_blank" rel="noopener">Webcoupers Consulting</a>.</h3><br>
-               <p>My work is progressive  and human-centered with a focus on art direction and product design. I’m also a dreamer, an early-adopter and a chess player.</p> <br>
-               <p>During my design journey, I've had the privilege of creating enabling experiences for people with brands like Budweiser, Nivea, Sprite, Schweppes, Sterling Bank, Globacom and more.</p><br>
-               <p>Teaching and mentorship has always been a huge part of my growth as a designer and you can book a free mentorship session with me <a href="https://adplist.org/mentors/chukwudumebi-iwuchukwu" target="_blank" rel="noopener">on ADPlist.org</a> for career advice, interview techniques, design leadership and portfolio reviews.</p>
-            </div>
-
-    </div>
-
-
-
-    </section> <!-- end about -->
 
 
 
