--- a/404.html
+++ b/404.html
@@ -54,8 +54,8 @@
         <nav class="header-nav-wrap">
             <ul class="header-nav">
               <li><a href="index.html#home" title="home">Home</a></li>
-              <li><a href="index.html#about" title="about">About</a></li>
-              <li><a href="index.html#portfolio" title="works">Works</a></li>
+              <li><a href="about.html" target="_blank" title="about">Me</a></li>
+              <li><a href="index.html#portfolio" title="works">Projects</a></li>
               <li><a href="scrapbook.html"  title="works">Scrapbook</a></li>
               <li><a href="index.html#contact" title="contact">Contact</a></li>
             </ul>
