--- a/about.html
+++ b/about.html
@@ -75,7 +75,7 @@
             <ul class="header-nav">
                 <li><a href="index.html#home" title="home">Home</a></li>
                 <li class="current"><a href="#" title="about">Me</a></li>
-                <li><a href="index.html#works" title="works">Works</a></li>
+                <li><a href="index.html#works" title="works">Projects</a></li>
                 <li><a class="smoothscroll"  href="https://adplist.org/mentors/chukwudumebi-iwuchukwu" target="_blank" rel="noopener" title="Design Mentorship">Mentoring</a></li>
                 <li><a href="scrapbook.html" title="scrapbook">Scrapbook</a></li>
                 <li><a href="#contact" title="contact">Contact</a></li>
