--- a/budweiser.html
+++ b/budweiser.html
@@ -74,9 +74,9 @@
         <nav class="header-nav-wrap">
             <ul class="header-nav">
                 <li><a href="index.html#home" title="home">Home</a></li>
-                <li><a href="index.html#about" title="about">About</a></li>
-                <li><a href="index.html#works" title="works">Works</a></li>
-                <li><a class="smoothscroll"  href="https://adplist.org/mentors/chukwudumebi-iwuchukwu" target="_blank" rel="noopener" title="works">Mentoring</a></li>
+                <li><a href="about.html" target="_blank"title="about">About</a></li>
+                <li><a href="index.html#works" title="works">Projects</a></li>
+                <li><a class="smoothscroll"  href="https://adplist.org/mentors/chukwudumebi-iwuchukwu" target="_blank" rel="noopener" title="Design Mentorship">Mentoring</a></li>
                 <li class="current"><a href="scrapbook.html" title="blog">Scrapbook</a></li>
                 <li><a href="#contact" title="contact">Contact</a></li>
             </ul>
