--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -82,7 +82,7 @@
             <ul class="header-nav">
               <ul class="header-nav">
                 <li><a href="about.html" title="about">Me</a></li>
-                <li><a href="index.html#portfolio" title="works">Works</a></li>
+                <li><a href="index.html#portfolio" title="works">Projects</a></li>
                 <li><a href="scrapbook.html"  title="Scrapbook">Scrapbook</a></li>
                 <li><a href="https://adplist.org/mentors/chukwudumebi-iwuchukwu" target="_blank" rel="noopener" title="Design Mentorship">Mentoring</a></li>
               </ul>
