--- a/about.html
+++ b/about.html
@@ -101,7 +101,7 @@
               </h1>
 
               <div class="col-six tab-full left">
-              <h3>I am Dumebi (Du-may-be) Nnadirinwa Iwuchukwu, a designer based in Lagos, Nigeria. I have been working in design for over 9 years now. Presently I'm an Art Director at <a href="https://www.webcoupers.com/" target="_blank" rel="noopener">Webcoupers Consulting</a>.</h3><br>
+              <h3>I am Dumebi (Du-may-be) Nnadirinwa Iwuchukwu, a designer based in Lagos, Nigeria. I have been working in design for over 9 years now. Presently I'm the Head of Design at <a href="https://www.bigcabal.com/" target="_blank" rel="noopener">Big Cabal Media</a>.</h3><br>
               </div>
 
 
@@ -134,12 +134,14 @@
                         <div class="timeline__block">
                             <div class="timeline__bullet"></div>
                             <div class="timeline__header">
-                                <p class="timeline__timeframe">August 2020 - Present</p>
-                                <h3>Art Director</h3>
-                                <h5><a href="https://www.webcoupers.com/" target="_blank" rel="noopener">Webcoupers Consulting</a></h5>
+                                <p class="timeline__timeframe">September 2021 - Present</p>
+                                <h3>Head of Design</h3>
+                                <h5><a href="https://www.bigcabal.com/" target="_blank" rel="noopener">Big Cabal Media</a></h5>
                             </div>
                             <div class="timeline__desc">
-                                <p>I handle Art direction, UI designs, Rich Media creatives, AR Instagram filter designs and marketing designs for a cross section of clients with output utilised across social media channels, print,  Google Display Network and other online platforms.</p>
+                                <p> My job is to delight our audiences through design, tell the stories that matter & create content that moves Africa. <br>
+                                  I deliver graphic design, UI/UX design and animation for Cabal Creative, TechCabal and Zikoko , take responsibility for the creative vision and standard of output across the team , ensure that all of the organization’s or client’s creative output/visuals are consistent with the overall brand & manage multiple cross-platform opportunities and projects .
+                                </p>
                             </div>
                         </div> <!-- end timeline__block -->
 
@@ -155,11 +157,24 @@
                             </div>
                         </div> <!-- end timeline__block -->
 
+
                     </div> <!-- end timeline -->
                 </div> <!-- end left -->
 
                 <div class="col-six tab-full right">
                     <div class="timeline">
+
+                      <div class="timeline__block">
+                          <div class="timeline__bullet"></div>
+                          <div class="timeline__header">
+                              <p class="timeline__timeframe">2020 - 2021</p>
+                              <h3>Art Director</h3>
+                              <h5><a href="https://www.webcoupers.com/" target="_blank" rel="noopener">Webcoupers Consulting</a></h5>
+                          </div>
+                          <div class="timeline__desc">
+                              <p>I handled Art direction, UI designs, Rich Media creatives, AR Instagram filter designs and marketing designs for a cross section of clients with output utilised across social media channels, print,  Google Display Network and other online platforms.</p>
+                          </div>
+                      </div> <!-- end timeline__block -->
 
                         <div class="timeline__block">
                             <div class="timeline__bullet"></div>
