--- a/about.html
+++ b/about.html
@@ -136,7 +136,7 @@
                             <div class="timeline__header">
                                 <p class="timeline__timeframe">September 2021 - Present</p>
                                 <h3>Head of Design</h3>
-                                <h5><a href="https://www.bigcabal.com/" target="_blank" rel="noopener">Big Cabal Media</a></h5>
+                                <h5><a href="https://www.bigcabal.com/" target="_blank" rel="noopener">Big Cabal Media, Lagos</a></h5>
                             </div>
                             <div class="timeline__desc">
                                 <p> My job is to delight our audiences through design, tell the stories that matter & create content that moves Africa. <br>
@@ -148,9 +148,22 @@
                         <div class="timeline__block">
                             <div class="timeline__bullet"></div>
                             <div class="timeline__header">
+                                <p class="timeline__timeframe">September 2021 - Present</p>
+                                <h3>Design Partner</h3>
+                                <h5><a href="https://www.meaningfulgigs.com/" target="_blank" rel="noopener">Meaningful Gigs, Washington, DC</a></h5>
+                            </div>
+                            <div class="timeline__desc">
+                                <p>Meaningful Gigs has built a strong community of African designers for Creative, Marketing, and Product teams who want highly skilled and diverse designers. <br>
+                                 Our Vision: Create 100,000 skilled jobs for Africans by 2028.</p>
+                            </div>
+                        </div> <!-- end timeline__block -->
+
+                        <div class="timeline__block">
+                            <div class="timeline__bullet"></div>
+                            <div class="timeline__header">
                                 <p class="timeline__timeframe">April 2021 - Present</p>
                                 <h3>Design Mentor</h3>
-                                <h5><a href="https://adplist.org/" target="_blank" rel="noopener">ADPList</a></h5>
+                                <h5><a href="https://adplist.org/" target="_blank" rel="noopener">ADPList, Singapore</a></h5>
                             </div>
                             <div class="timeline__desc">
                                 <p>ADPList is a platform where people can find, book and meet mentors from around the world. Here I mentor aspiring and current designers of diverse backgrounds and career stages, looking for support and guidance on various topics.</p>
@@ -169,7 +182,7 @@
                           <div class="timeline__header">
                               <p class="timeline__timeframe">2020 - 2021</p>
                               <h3>Art Director</h3>
-                              <h5><a href="https://www.webcoupers.com/" target="_blank" rel="noopener">Webcoupers Consulting</a></h5>
+                              <h5><a href="https://www.webcoupers.com/" target="_blank" rel="noopener">Webcoupers Consulting, Lagos</a></h5>
                           </div>
                           <div class="timeline__desc">
                               <p>I handled Art direction, UI designs, Rich Media creatives, AR Instagram filter designs and marketing designs for a cross section of clients with output utilised across social media channels, print,  Google Display Network and other online platforms.</p>
