--- a/index.html
+++ b/index.html
@@ -62,6 +62,11 @@
     <!-- favicons
     ================================================== -->
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+    
+    
+    <!-- adsense
+    ================================================== --> 
+    <script data-ad-client="ca-pub-3584657889118246" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
     <!-- Cookie consent
     ================================================== -->
