--- a/scrapbook.html
+++ b/scrapbook.html
@@ -58,6 +58,10 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 
+    <!-- adsense
+    ================================================== --> 
+    <script data-ad-client="ca-pub-3584657889118246" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    
     <!-- Cookie consent
     ================================================== -->
 
