--- a/blog-single.html
+++ b/blog-single.html
@@ -53,6 +53,10 @@
     <script src="js/modernizr.js"></script>
     <script src="js/pace.min.js"></script>
 
+    <!-- adsense
+    ================================================== -->
+    <script data-ad-client="ca-pub-3584657889118246" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    
     <!-- favicons
     ================================================== -->
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
