Add image to scrapbook

--- a/scrapbook.html
+++ b/scrapbook.html
@@ -59,9 +59,9 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 
     <!-- adsense
-    ================================================== --> 
+    ================================================== -->
     <script data-ad-client="ca-pub-3584657889118246" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    
+
     <!-- Cookie consent
     ================================================== -->
 
@@ -201,6 +201,11 @@
               <img class='grid-item grid-item-18 lazyload' style= "box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);" src='images/Nivea_Hat_trick_pack.png' alt=''class="lazyload">
 
             </div>
+            <div>
+              <img class='grid-item grid-item-19 lazyload' style= "box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);" src='images/Lego_ad.png' alt=''class="lazyload">
+
+            </div>
+
           </div>
 
 
