--- a/offline.html
+++ b/offline.html
@@ -11,7 +11,7 @@
     <!--- basic page needs
     ================================================== -->
   <meta name="yandex-verification" content="33730aaf93aa663d" />
-    <title>Dumebi Iwuchukwu | Art Director</title>
+    <title>Dumebi Iwuchukwu</title>
     <meta name="description" content="I help businesses scale and make money by designing brands, products and experiences at the intersection of culture, design and technology.">
     <meta name="theme-color" content="#9849b1"/>
 
