--- a/about.html
+++ b/about.html
@@ -101,7 +101,9 @@
               </h1>
 
               <div class="col-six tab-full left">
-              <h3>I am Dumebi (Du-may-be) Nnadirinwa Iwuchukwu, a designer based in Lagos, Nigeria. I have been working in design for over 9 years now. Presently I'm the Head of Design at <a href="https://www.bigcabal.com/" target="_blank" rel="noopener">Big Cabal Media</a>.</h3><br>
+              <h3>I am Dumebi (Du-may-be) Nnadirinwa Iwuchukwu, <br />
+
+                 Presently I'm the Head of Design at <a href="https://www.bigcabal.com/" target="_blank" rel="noopener">Big Cabal Media</a> where I lead a multi-disciplary team of Brand and Product designers.</h3><br>
               </div>
 
 
@@ -109,9 +111,9 @@
 
                       <div>
 
-                         <p>My work is progressive  and human-centered with a focus on art direction and product design. I’m also a dreamer, an early-adopter and a chess player.</p> <br>
+                         <p>I have been working in design for about 10 years now with experience in Brand, Product and Marketing Design. <br /></p> <br>
                          <p>During my design journey, I've had the privilege of creating enabling experiences for people with brands like Budweiser, Nivea, Sprite, Schweppes, Sterling Bank, Globacom and more.</p><br>
-                         <p>Teaching and mentorship has always been a huge part of my growth as a designer and you can book a free mentorship session with me <a href="https://adplist.org/mentors/chukwudumebi-iwuchukwu" target="_blank" rel="noopener">on ADPlist.org</a> for career advice, interview techniques, design leadership and portfolio reviews.</p><br>
+                         <p>Teaching and mentorship has always been a huge part of my career as a designer and you can book a free mentorship session with me <a href="https://adplist.org/mentors/chukwudumebi-iwuchukwu" target="_blank" rel="noopener">on ADPlist.org</a> for career advice, interview techniques, design leadership and portfolio reviews.</p><br>
                       </div>
 
               </div>
@@ -122,7 +124,7 @@
 
             </div><!-- end blog-content__main -->
 
-            
+
         </div> <!-- end blog-content -->
 
     </article>
@@ -169,9 +171,9 @@
                     <i class="im im-linkedin" aria-hidden="true"></i>
                     <span>Linkedin</span>
                 </a></li>
-                <li><a href="https://www.behance.net/dum3bi" target="_blank" rel="noopener">
-                    <i class="im im-behance" aria-hidden="true"></i>
-                    <span>Behance</span>
+                <li><a href="https://www.twitter.com/dum3bi" target="_blank" rel="noopener">
+                    <i class="im im-twitter" aria-hidden="true"></i>
+                    <span>Twitter</span>
                 </a></li>
                   <li><a href="https://github.com/dum3bi" target="_blank" rel="noopener">
                       <i class="im im-github" aria-hidden="true"></i>
@@ -190,7 +192,7 @@
 
                 <div class="col-twelve">
                   <div class="copyright">
-                    <div>Content © 2021 Dumebi Iwuchukwu 神は私の人生をリードします</div>
+                    <div>Content © 2022 Dumebi Iwuchukwu 神は私の人生をリードします</div>
                     <div>Design and code (except graphics) are open source on <a href="https://github.com/Dum3bi/Dumebi-Iwuchukwu-personal-website" target="_blank" rel="noopener">GitHub</a>. Hosted on <a href="https://netlify.com/" target="_blank" rel="noopener">Netlify</a>.</div>
                     <div><a  href="terms-of-service.html" target="_blank">Terms of Service</a> | <a  href="privacy-policy.html" target="_blank">Privacy Policy.</a> </div>
                   </div>
