--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                 <a href="https://linkedin.com/in/chukwudumebi" target="_blank" rel="noopener"><i class="im im-linkedin" aria-hidden="true"></i><span>Linkedin</span></a>
             </li>
             <li>
-                <a href="https://www.behance.net/dum3bi" target="_blank" rel="noopener"><i class="im im-behance" aria-hidden="true"></i><span>Behance</span></a>
+                <a href="https://www.twitter.com/dum3bi" target="_blank" rel="noopener"><i class="im im-twitter" aria-hidden="true"></i><span>twitter</span></a>
             </li>
             <li>
                 <a href="https://github.com/dum3bi" target="_blank" rel="noopener"><i class="im im-github" aria-hidden="true"></i><span>Github</span></a>
@@ -451,9 +451,9 @@
                       <i class="im im-linkedin" aria-hidden="true"></i>
                       <span>Linkedin</span>
                   </a></li>
-                  <li><a href="https://www.behance.net/dum3bi" target="_blank" rel="noopener">
-                      <i class="im im-behance" aria-hidden="true"></i>
-                      <span>Behance</span>
+                  <li><a href="https://www.twitter.com/dum3bi" target="_blank" rel="noopener">
+                      <i class="im im-twitter" aria-hidden="true"></i>
+                      <span>twitter</span>
                   </a></li>
                     <li><a href="https://github.com/dum3bi" target="_blank" rel="noopener">
                         <i class="im im-github" aria-hidden="true"></i>
@@ -472,7 +472,7 @@
 
             <div class="col-twelve">
                 <div class="copyright">
-                  <div>Content © 2021 Dumebi Iwuchukwu 神は私の人生をリードします</div>
+                  <div>Content © 2022 Dumebi Iwuchukwu 神は私の人生をリードします</div>
                   <div>Design and code (except graphics) are open source on <a href="https://github.com/Dum3bi/Dumebi-Iwuchukwu-personal-website" target="_blank" rel="noopener">GitHub</a>. Hosted on <a href="https://netlify.com/" target="_blank" rel="noopener">Netlify</a>.</div>
                   <div><a  href="terms-of-service.html" target="_blank">Terms of Service</a> | <a  href="privacy-policy.html" target="_blank">Privacy Policy.</a> </div>
                 </div>
