--- a/scrapbook.html
+++ b/scrapbook.html
@@ -118,7 +118,7 @@
 
                  <p>My conscious appreciation of design and art started at the age of eight when my Mom gave me the gift of a scrapbook, Its wide empty pages filled my imagination with possibilities and there begun my journey as a designer.</p> <br>
                    <p> I could say that's how my journey as a designer began. I would cut out comic strips and beautiful ads from my Dad's old magazines and newspapers </p> <br>
-                  <p>This scrapbook is not much different from the scrapbook of my childhood, as I'm still collecting images i loved. It's just no longer from my dad's magazines but snippets from large projects I worked on, my photography or simply just experiments from the past 9 years.</p>
+                  <p>This scrapbook is not much different from the scrapbook of my childhood, as I'm still collecting images I love. It's just no longer from my dad's magazines but snippets from large projects I worked on, my photography or simply just experiments from the past 10 years.</p>
             </div>
         </div>
         <div class="row portfolio-content">
@@ -258,9 +258,9 @@
                     <i class="im im-linkedin" aria-hidden="true"></i>
                     <span>Linkedin</span>
                 </a></li>
-                <li><a href="https://www.behance.net/dum3bi" target="_blank" rel="noopener">
-                    <i class="im im-behance" aria-hidden="true"></i>
-                    <span>Behance</span>
+                <li><a href="https://www.twitter.com/dum3bi" target="_blank" rel="noopener">
+                    <i class="im im-twitter" aria-hidden="true"></i>
+                    <span>Twitter</span>
                 </a></li>
                   <li><a href="https://github.com/dum3bi" target="_blank" rel="noopener">
                       <i class="im im-github" aria-hidden="true"></i>
@@ -279,7 +279,7 @@
 
                 <div class="col-twelve">
                   <div class="copyright">
-                    <div>Content © 2021 Dumebi Iwuchukwu 神は私の人生をリードします</div>
+                    <div>Content © 2022 Dumebi Iwuchukwu 神は私の人生をリードします</div>
                     <div>Design and code (except graphics) are open source on <a href="https://github.com/Dum3bi/Dumebi-Iwuchukwu-personal-website" target="_blank" rel="noopener">GitHub</a>. Hosted on <a href="https://netlify.com/" target="_blank" rel="noopener">Netlify</a>.</div>
                     <div><a  href="terms-of-service.html" target="_blank">Terms of Service</a> | <a  href="privacy-policy.html" target="_blank">Privacy Policy.</a> </div>
                   </div>
