--- a/about.html
+++ b/about.html
@@ -100,19 +100,21 @@
                       About me
               </h1>
 
-              <div class="col-six tab-full left">
+              <div >
               <h3>I am Dumebi (Du-may-be) Nnadirinwa Iwuchukwu, <br />
 
-                 Presently I'm the Head of Design at <a href="https://www.bigcabal.com/" target="_blank" rel="noopener">Big Cabal Media</a> where I lead a multi-disciplary team of Brand and Product designers.</h3><br>
+                 Head of Design at <a href="https://www.bigcabal.com/" target="_blank" rel="noopener">Big Cabal Media</a> where I lead a team of Brand and Product designers.</h3><br>
               </div>
 
 
-              <div class="col-six tab-full right">
+              <div >
+
+              </div>
 
                       <div>
 
                          <p>I have been working in design for about 10 years now with experience in Brand, Product and Marketing Design. <br /></p> <br>
-                         <p>During my design journey, I've had the privilege of creating enabling experiences for people with brands like Budweiser, Nivea, Sprite, Schweppes, Sterling Bank, Globacom and more.</p><br>
+                         <p>During my design journey, I've had the privilege of creating enabling experiences for people with brands like Google, Budweiser, Nivea, Sprite, Schweppes, Sterling Bank, Globacom and more.</p><br>
                          <p>Teaching and mentorship has always been a huge part of my career as a designer and you can book a free mentorship session with me <a href="https://adplist.org/mentors/chukwudumebi-iwuchukwu" target="_blank" rel="noopener">on ADPlist.org</a> for career advice, interview techniques, design leadership and portfolio reviews.</p><br>
                       </div>
 
@@ -129,32 +131,7 @@
 
     </article>
 
-    <section id="contact" class="s-contact target-section">
 
-        <div class="overlay"></div>
-
-        <div class="row narrow section-intro">
-            <div class="col-full">
-                <h3>How might we work together?</h3>
-                <h1>Contact me.</h1>
-
-                <p>I like to listen.</p>
-            </div>
-        </div>
-        <div class="row contact__main">
-            <div class="col-eight tab-full contact__form">
-              <h4 class="h06">Email</h4>
-              <p><a href="mailto:me@dum3bi.com">me@dum3bi.com</a></p>
-            </div>
-            <div class="col-four tab-full contact__infos">
-              <h4 class="h06">Phone</h4>
-              <p><a href="tel:234 9065 71 2102">234-9065-71-2102</a></p>
-            </div>
-
-        </div>
-
-
-    </section> <!-- end s-contact -->
 
     <!-- footer
     ================================================== -->
