--- a/index.html
+++ b/index.html
@@ -112,7 +112,8 @@
              <div class="home-content__buttons">
                <h1>
                  Hi 👋🏼, I'm Dumebi, <br>
-                 I design beautiful experiences & mentor designers.
+                 Head of Design at Big Cabal Media.<br>
+                 I design brands, products, and experiences.
                </h1>
              </div>
 
@@ -158,11 +159,7 @@
 
         <div class="row narrow section-intro has-bottom-sep">
             <div class="col-full">
-                <h3>Portfolio</h3>
-                <h1>My Latest Projects.</h1>
-
-                <p style="text-align:center;" class="lead">“You might see me with my hoody up, I ain't leaving 'til I finish.” <br>
-                                    -NF</p>
+                <h1>Portfolio</h1>
             </div>
         </div>
         <div class="row portfolio-content">
@@ -409,32 +406,7 @@
 
 
 
-    <section id="contact" class="s-contact target-section">
-
-        <div class="overlay"></div>
-
-        <div class="row narrow section-intro">
-            <div class="col-full">
-                <h3>How might we work together?</h3>
-                <h1>Contact me.</h1>
-
-                <p style="text-align:center;" class="lead">I like to listen.</p>
-            </div>
-        </div>
-        <div class="row contact__main">
-          <div class="col-eight tab-full contact__form">
-            <h4 class="h06">Send me an email</h4>
-            <p><a href="mailto:me@dum3bi.com?bcc=dum3bi@gmail.com&subject=Nice%20meeting%20you%20Dumebi&body=Hi%20Dumebi%2C%0D%0A%0D%0A" target="_blank">me@dum3bi.com</a></p>
-          </div>
-          <div class="col-four tab-full contact__infos">
-            <h4 class="h06">Call me</h4>
-            <p><a href="tel:234 9065 71 2102">234-9065-71-2102</a></p>
-          </div>
-
-        </div>
-
-
-    </section> <!-- end s-contact -->
+    
 
     <!-- footer
     ================================================== -->
